--- a/Androidteam/res/values/colors.xml
+++ b/Androidteam/res/values/colors.xml
@@ -21,4 +21,6 @@
     <color name="cGray">#dcdcdc</color>
     <color name="cRed">#FF0000</color>
     <color name="cRedBG">#990000</color>
+    <color name="back_color">#00CCFF</color>
+    <color name="register_color">#000000</color>
 </resources>
