提交一波修改

--- a/Androidteam/res/layout/fragment_personal.xml
+++ b/Androidteam/res/layout/fragment_personal.xml
@@ -6,143 +6,181 @@
     <include 
         android:id="@+id/tv_top"
         layout="@layout/layout_titlebar_2"/>
-    <LinearLayout 
-        android:id="@+id/ll_1"
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
-        <TextView 
-            android:id="@+id/tv_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/xing_ming"
-            android:textColor="@color/cBlack"/>
-        <EditText 
-            android:id="@+id/et_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/xing_ming"
-            android:layout_weight="1"
-            />
-        <TextView 
-            android:id="@+id/tv_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/xing_ming"
-            android:textColor="@color/cBlack"/>
-        <EditText 
-            android:id="@+id/et_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/xing_ming"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
-    <LinearLayout 
-        android:id="@+id/ll_2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TextView 
-            android:id="@+id/tv_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/xing_ming"
-            android:textColor="@color/cBlack"/>
-        <EditText 
-            android:id="@+id/et_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/xing_ming"
-            android:layout_weight="1"
-            />
-        <TextView 
-            android:id="@+id/tv_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/xing_ming"
-            android:textColor="@color/cBlack"/>
-        <EditText 
-            android:id="@+id/et_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/xing_ming"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
-    <LinearLayout 
-        android:id="@+id/ll_3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TextView 
-            android:id="@+id/tv_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/xing_ming"
-            android:textColor="@color/cBlack"/>
-        <EditText 
-            android:id="@+id/et_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/xing_ming"
-            android:layout_weight="1"
-            />
-        <TextView 
-            android:id="@+id/tv_6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/xing_ming"
-            android:textColor="@color/cBlack"/>
-        <EditText 
-            android:id="@+id/et_6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/xing_ming"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
-    <LinearLayout 
-        android:id="@+id/ll_4"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TextView 
-            android:id="@+id/tv_7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/xing_ming"
-            android:textColor="@color/cBlack"/>
-        <EditText 
-            android:id="@+id/et_7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/xing_ming"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
-    <TextView 
-        android:id="@+id/tv_8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/xing_ming"/>
-    <TextView 
-        android:id="@+id/tv_9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/xing_ming"/>
-    <TextView 
-        android:id="@+id/tv_10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/xing_ming"/>
-    <TextView 
-        android:id="@+id/tv_11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/xing_ming"/>
-
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout 
+        		android:id="@+id/ll_1"
+        		android:layout_width="fill_parent"
+        		android:layout_height="wrap_content">
+        		<TextView 
+            		android:id="@+id/tv_1"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:layout_weight="1"
+            		android:text="@string/xing_ming"
+            		android:textColor="@color/cBlack"/>
+        		<EditText 
+            		android:id="@+id/et_1"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:text="@string/xing_ming"
+            		android:layout_weight="1"
+            	/>
+        		<TextView 
+            		android:id="@+id/tv_2"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:layout_weight="1"
+            		android:text="@string/xing_ming"
+            		android:textColor="@color/cBlack"/>
+        		<EditText 
+            		android:id="@+id/et_2"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:text="@string/xing_ming"
+            		android:layout_weight="1"
+            	/>
+    		</LinearLayout>
+    		<LinearLayout 
+        		android:id="@+id/ll_2"
+        		android:layout_width="fill_parent"
+        		android:layout_height="wrap_content">
+        		<TextView 
+            		android:id="@+id/tv_3"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:layout_weight="1"
+            		android:text="@string/xing_ming"
+            		android:textColor="@color/cBlack"/>
+        		<EditText 
+            		android:id="@+id/et_3"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:text="@string/xing_ming"
+            		android:layout_weight="1"
+            	/>
+        		<TextView 
+            		android:id="@+id/tv_4"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:layout_weight="1"
+            		android:text="@string/xing_ming"
+            		android:textColor="@color/cBlack"/>
+        		<EditText 
+            		android:id="@+id/et_4"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:text="@string/xing_ming"
+            		android:layout_weight="1"
+            	/>
+    		</LinearLayout>
+    		<LinearLayout 
+        		android:id="@+id/ll_3"
+        		android:layout_width="fill_parent"
+        		android:layout_height="wrap_content">
+        		<TextView 
+            		android:id="@+id/tv_5"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:layout_weight="0.2"
+            		android:text="@string/xing_ming"
+            		android:textColor="@color/cBlack"/>
+        		<EditText 
+            		android:id="@+id/et_5"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:text="@string/xing_ming"
+            		android:layout_weight="1"
+            	/>
+        	</LinearLayout>
+        	<LinearLayout 
+        	    android:id="@+id/ll_4"
+        	    android:layout_width="fill_parent"
+        	    android:layout_height="wrap_content">
+        		<TextView 
+            		android:id="@+id/tv_6"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:layout_weight="0.2"
+            		android:text="@string/xing_ming"
+            		android:textColor="@color/cBlack"/>
+        		<EditText 
+            		android:id="@+id/et_6"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:text="@string/xing_ming"
+            		android:layout_weight="1"
+            	/>
+    		</LinearLayout>
+    		<LinearLayout 
+        		android:id="@+id/ll_5"
+        		android:layout_width="fill_parent"
+        		android:layout_height="wrap_content">
+        		<TextView 
+            		android:id="@+id/tv_7"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:layout_weight="0.2"
+            		android:text="@string/xing_ming"
+            		android:textColor="@color/cBlack"/>
+        		<EditText 
+            		android:id="@+id/et_7"
+            		android:layout_width="wrap_content"
+            		android:layout_height="wrap_content"
+            		android:text="@string/xing_ming"
+            		android:layout_weight="1"
+            	/>
+    		</LinearLayout>
+    		<TextView 
+        		android:id="@+id/tv_8"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:text="@string/xing_ming"/>
+    		<ListView 
+    		    android:id="@+id/lst_1"
+    		    android:layout_width="fill_parent"
+    		    android:layout_height="wrap_content">
+    		    
+    		</ListView>
+    		<TextView 
+        		android:id="@+id/tv_9"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:text="@string/xing_ming"/>
+    		<ListView 
+    		    android:id="@+id/lst_2"
+    		    android:layout_width="fill_parent"
+    		    android:layout_height="wrap_content">
+    		    
+    		</ListView>
+    		<TextView 
+        		android:id="@+id/tv_10"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:text="@string/xing_ming"/>
+    		<ListView 
+    		    android:id="@+id/lst_3"
+    		    android:layout_width="fill_parent"
+    		    android:layout_height="wrap_content">
+    		    
+    		</ListView>
+    		<TextView 
+        		android:id="@+id/tv_11"
+        		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:text="@string/xing_ming"/>
+    		<ListView 
+    		    android:id="@+id/lst_4"
+    		    android:layout_width="fill_parent"
+    		    android:layout_height="wrap_content">
+    		    
+    		</ListView>
+        </LinearLayout>
+        
+    </ScrollView>
 </LinearLayout>
