--- a/Androidteam/res/layout/layout_titlebar_2.xml
+++ b/Androidteam/res/layout/layout_titlebar_2.xml
@@ -16,7 +16,7 @@
         android:src="@drawable/returnto" />
     
     <TextView
-        android:id="@+id/tv_1"
+        android:id="@+id/tv"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
