--- a/Androidteam/res/layout/layout_item_student_list.xml
+++ b/Androidteam/res/layout/layout_item_student_list.xml
@@ -26,4 +26,10 @@
             android:layout_height="match_parent"
             android:text="@string/nian_ji"
             android:gravity="center" />
+    <Button 
+        android:id="@+id/btn_doit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/yao_qing"/>
+    
 </LinearLayout>
