--- a/Androidteam/res/layout/spinner_item.xml
+++ b/Androidteam/res/layout/spinner_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Spinner 
+<TextView 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/tv_spinner"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:id="@+id/spinner" /> 
+    android:layout_height="wrap_content"/>    
