--- a/Androidteam/res/layout/layout_item_myteam_list.xml
+++ b/Androidteam/res/layout/layout_item_myteam_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@color/bGray" >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" >
 
     <TextView
             android:id="@+id/tv_1"
@@ -19,6 +18,4 @@
             android:layout_height="wrap_content"
             android:text="@string/xing_ming"
             android:gravity="center" />
-
-    
 </LinearLayout>
