--- a/Androidteam/res/layout/layout_alert.xml
+++ b/Androidteam/res/layout/layout_alert.xml
@@ -1,82 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fl"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:clickable="true"
-    android:orientation="vertical"
-    android:padding="20.0dip" >
+    android:orientation="vertical" >
 
-    <LinearLayout
+    <EditText
+        android:id="@+id/alert_1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@drawable/bg_bombbox"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/tv_1"
-            style="@style/text_18_ffffff"
-            android:layout_width="fill_parent"
-            android:layout_height="40.0dip"
-            android:gravity="center"
-            android:text="@string/ti_jiao_ping_lun"
-            android:textColor="#000000"
-            android:visibility="visible" />
-
-        <LinearLayout
-            android:id="@+id/ll_1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" >
+        android:layout_height="wrap_content"/>
+    <EditText
+        android:id="@+id/alert_2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
+    <EditText
+        android:id="@+id/alert_3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
 
 
-            <EditText
-                android:id="@+id/et_1"
-                style="@style/text_16_666666"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left|center"
-                android:lineSpacingMultiplier="1.5"
-                android:minHeight="120.0dip"
-                android:paddingBottom="15.0dip"
-                android:paddingLeft="20.0dip"
-                android:paddingRight="20.0dip"
-                android:paddingTop="15.0dip" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1.0px"
-            android:background="#ffd0d0d0" />
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="60.0dip"
-            android:layout_gravity="bottom"
-            android:background="@drawable/dialog_bottom_bg"
-            android:gravity="center"
-            android:orientation="horizontal" >
-
-            <Button
-                android:id="@+id/tv_2"
-                style="@style/text_15_ffffff_sdw"
-                android:layout_width="114.0dip"
-                android:layout_height="40.0dip"
-                android:background="@drawable/btn_ok_selector"
-                android:gravity="center"
-                android:text="@string/ti_jiao" />
-
-            <Button
-                android:id="@+id/tv_3"
-                style="@style/text_15_666666_sdw"
-                android:layout_width="114.0dip"
-                android:layout_height="40.0dip"
-                android:layout_marginLeft="20.0dip"
-                android:background="@drawable/btn_cancel_selector"
-                android:gravity="center"
-                android:text="@string/qu_xiao" />
-        </LinearLayout>
-    </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
