--- a/Androidteam/res/layout/activity_team_abo.xml
+++ b/Androidteam/res/layout/activity_team_abo.xml
@@ -84,11 +84,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/xing_ming"/>
-           <ListView 
+           <com.etech.myteam.view.MyListView 
                android:id="@+id/lst"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
-           </ListView>
+           </com.etech.myteam.view.MyListView>
            <LinearLayout 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
