--- a/Androidteam/res/layout/fragment_personal.xml
+++ b/Androidteam/res/layout/fragment_personal.xml
@@ -141,45 +141,45 @@
         		android:layout_width="wrap_content"
         		android:layout_height="wrap_content"
         		android:text="@string/xing_ming"/>
-    		<ListView 
+    		<com.etech.myteam.view.MyListView 
     		    android:id="@+id/lst_1"
     		    android:layout_width="fill_parent"
     		    android:layout_height="wrap_content">
     		    
-    		</ListView>
+    		</com.etech.myteam.view.MyListView>
     		<TextView 
         		android:id="@+id/tv_9"
         		android:layout_width="wrap_content"
         		android:layout_height="wrap_content"
         		android:text="@string/xing_ming"/>
-    		<ListView 
+    		<com.etech.myteam.view.MyListView 
     		    android:id="@+id/lst_2"
     		    android:layout_width="fill_parent"
     		    android:layout_height="wrap_content">
     		    
-    		</ListView>
+    		</com.etech.myteam.view.MyListView>
     		<TextView 
         		android:id="@+id/tv_10"
         		android:layout_width="wrap_content"
         		android:layout_height="wrap_content"
         		android:text="@string/xing_ming"/>
-    		<ListView 
+    		<com.etech.myteam.view.MyListView 
     		    android:id="@+id/lst_3"
     		    android:layout_width="fill_parent"
     		    android:layout_height="wrap_content">
     		    
-    		</ListView>
+    		</com.etech.myteam.view.MyListView>
     		<TextView 
         		android:id="@+id/tv_11"
         		android:layout_width="wrap_content"
         		android:layout_height="wrap_content"
         		android:text="@string/xing_ming"/>
-    		<ListView 
+    		<com.etech.myteam.view.MyListView 
     		    android:id="@+id/lst_4"
     		    android:layout_width="fill_parent"
     		    android:layout_height="wrap_content">
     		    
-    		</ListView>
+    		</com.etech.myteam.view.MyListView>
     		<Button 
     		    android:id="@+id/btn_1"
     		    android:layout_height="wrap_content"
