--- a/Androidteam/res/layout/fragment_student_info.xml
+++ b/Androidteam/res/layout/fragment_student_info.xml
@@ -83,8 +83,9 @@
     <ListView
         android:id="@+id/student_list"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:background="@color/cGray" >
-</ListView>
+        
+    </ListView>
 
 </LinearLayout>
