--- a/Androidteam/res/layout/fragment_team_info.xml
+++ b/Androidteam/res/layout/fragment_team_info.xml
@@ -117,16 +117,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
+        </LinearLayout>               
         </LinearLayout>
-        
-        
-        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
         <Button 
-            android:id="@+id/btn_1"
+            android:id="@+id/btn_add"
             android:layout_width="wrap_content"
             android:layout_weight= "1"
             android:layout_height="wrap_content"
             android:text="@string/xin_zeng"/>
+        <Button 
+            android:id="@+id/btn_search"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="@string/cha_xun"/>
+        </LinearLayout>"
         
         
     </LinearLayout>
@@ -143,7 +153,7 @@
         android:spinnerMode="dropdown"/>
 
     <ListView
-        android:id="@+id/student_list"
+        android:id="@+id/team_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/cGray" >
