--- a/Androidteam/res/layout/fragment_team_info.xml
+++ b/Androidteam/res/layout/fragment_team_info.xml
@@ -156,7 +156,8 @@
         android:id="@+id/team_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cGray" >
+        android:background="@color/cGray"
+        >
         
     </ListView>
 
