--- a/Androidteam/res/layout/layout_item_team_list.xml
+++ b/Androidteam/res/layout/layout_item_team_list.xml
@@ -4,7 +4,8 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/bGray" 
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:descendantFocusability="afterDescendants">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -125,7 +126,7 @@
         
         </LinearLayout>
         <Button 
-            android:id="@+id/btn_1"
+            android:id="@+id/join"
             android:layout_width="wrap_content"
             android:layout_weight= "1"
             android:layout_height="wrap_content"
