--- a/Androidteam/res/layout/activity_register.xml
+++ b/Androidteam/res/layout/activity_register.xml
@@ -76,5 +76,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/zhu_ce" />
+    <Button 
+        android:id="@+id/btn_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/qu_xiao" />
 
 </LinearLayout>
