修复新增/修改个人技能相关问题

--- a/Androidteam/res/layout/layout_alert.xml
+++ b/Androidteam/res/layout/layout_alert.xml
@@ -17,5 +17,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>
 
+    <Spinner
+        android:id="@+id/spinner_alert"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/tech_level"
+        android:spinnerMode="dropdown" />
 
 </LinearLayout>
