--- a/Androidteam/res/layout/layout_item_student_list.xml
+++ b/Androidteam/res/layout/layout_item_student_list.xml
@@ -30,6 +30,7 @@
         android:id="@+id/btn_doit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/yao_qing"/>
+        android:text="@string/yao_qing"
+        android:focusable="false"/>
     
 </LinearLayout>
